--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -2418,6 +2418,304 @@ ul.list-reset.app-list li.app-logo img {
     font-size: 18px;
   }
 }
+.slider-fellow {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
+}
+@media (min-width: 1024px) {
+  .slider-fellow {
+    width: 700px;
+    height: 363px;
+  }
+}
+@media (min-width: 1366px) {
+  .slider-fellow {
+    width: 894px;
+    height: 484px;
+  }
+}
+@media (min-width: 1600px) {
+  .slider-fellow {
+    width: 1135px;
+    height: 567px;
+  }
+}
+@media (min-width: 1920px) {
+  .slider-fellow {
+    width: 1268px;
+    height: 680px;
+  }
+}
+@media (max-width: 1023px) {
+  .slider-fellow.slideBox {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media (min-width: 1024px) {
+  .slider-fellow.slideBox {
+    top: -30px;
+  }
+}
+@media (min-width: 1366px) {
+  .slider-fellow.slideBox {
+    top: -40px;
+  }
+}
+@media (min-width: 1600px) {
+  .slider-fellow.slideBox {
+    top: -46px;
+  }
+}
+@media (min-width: 1920px) {
+  .slider-fellow.slideBox {
+    top: -55px;
+  }
+}
+.slider-fellow .inner {
+  width: 100%;
+  height: 100%;
+}
+@media (min-width: 1024px) {
+  .slider-fellow .inner {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 3000px;
+    margin-left: -1500px;
+  }
+}
+.slider-fellow .swiper-container {
+  width: 100%;
+  height: 100%;
+}
+.slider-fellow .swiper-slide {
+  text-align: center;
+}
+@media (min-width: 1024px) {
+  .slider-fellow .swiper-slide {
+    width: 107px;
+    padding: 59px 0;
+  }
+}
+@media (min-width: 1366px) {
+  .slider-fellow .swiper-slide {
+    width: 142px;
+    padding: 78px 0;
+  }
+}
+@media (min-width: 1600px) {
+  .slider-fellow .swiper-slide {
+    width: 167px;
+    padding: 92px 0;
+  }
+}
+@media (min-width: 1920px) {
+  .slider-fellow .swiper-slide {
+    width: 200px;
+    padding: 110px 0;
+  }
+}
+.slider-fellow .swiper-slide .item {
+  position: relative;
+  cursor: pointer;
+  background-position: center;
+  background-repeat: no-repeat;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  -webkit-background-size: cover;
+  background-size: cover;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+@media (min-width: 1024px) {
+  .slider-fellow .swiper-slide .item {
+    height: 235px;
+  }
+}
+@media (min-width: 1366px) {
+  .slider-fellow .swiper-slide .item {
+    height: 313px;
+  }
+}
+@media (min-width: 1600px) {
+  .slider-fellow .swiper-slide .item {
+    height: 367px;
+  }
+}
+@media (min-width: 1920px) {
+  .slider-fellow .swiper-slide .item {
+    height: 440px;
+  }
+}
+.slider-fellow .swiper-slide .item:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 20;
+}
+@media (min-width: 1024px) {
+  .slider-fellow .swiper-slide .img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    opacity: 0;
+    visibility: hidden;
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    z-index: 10;
+  }
+  .slider-fellow .swiper-slide .img img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+}
+@media (min-width: 1024px) {
+  .slider-fellow .swiper-slide .img {
+    width: 314px;
+    height: 391px;
+  }
+}
+@media (min-width: 1366px) {
+  .slider-fellow .swiper-slide .img {
+    width: 418px;
+    height: 522px;
+  }
+}
+@media (min-width: 1600px) {
+  .slider-fellow .swiper-slide .img {
+    width: 490px;
+    height: 612px;
+  }
+}
+@media (min-width: 1920px) {
+  .slider-fellow .swiper-slide .img {
+    width: 588px;
+    height: 734px;
+  }
+}
+.slider-fellow .swiper-slide .text {
+  position: absolute;
+  left: -10px;
+  bottom: 30px;
+  opacity: 0;
+  z-index: 2;
+  transition: .4s all;
+  z-index: 11;
+}
+.slider-fellow .swiper-slide.no1 .item {
+  background-image: url("../img/adCha01.png");
+}
+.slider-fellow .swiper-slide.no2 .item {
+  background-image: url("../img/adCha02.png");
+}
+.slider-fellow .swiper-slide.no3 .item {
+  background-image: url("../img/adCha03.png");
+}
+.slider-fellow .swiper-slide.no4 .item {
+  background-image: url("../img/adCha04.png");
+}
+.slider-fellow .swiper-slide.no5 .item {
+  background-image: url("../img/adCha05.png");
+}
+.slider-fellow .swiper-slide.no1 .item:hover {
+  background-image: url("../img/adCha01_on.png");
+}
+.slider-fellow .swiper-slide.no2 .item:hover {
+  background-image: url("../img/adCha02_on.png");
+}
+.slider-fellow .swiper-slide.no3 .item:hover {
+  background-image: url("../img/adCha03_on.png");
+}
+.slider-fellow .swiper-slide.no4 .item:hover {
+  background-image: url("../img/adCha04_on.png");
+}
+.slider-fellow .swiper-slide.no5 .item:hover {
+  background-image: url("../img/adCha05_on.png");
+}
+.slider-fellow .img {
+  text-align: center;
+}
+@media (min-width: 1024px) {
+  .slider-fellow .swiper-slide-active {
+    width: 170px !important;
+  }
+}
+@media (min-width: 1366px) {
+  .slider-fellow .swiper-slide-active {
+    width: 226px !important;
+  }
+}
+@media (min-width: 1600px) {
+  .slider-fellow .swiper-slide-active {
+    width: 265px !important;
+  }
+}
+@media (min-width: 1920px) {
+  .slider-fellow .swiper-slide-active {
+    width: 318px !important;
+  }
+}
+.slider-fellow .swiper-slide-active .item {
+  background: none !important;
+}
+.slider-fellow .swiper-slide-active .img {
+  opacity: 1;
+  visibility: visible;
+  -moz-transition: all 1s;
+  -o-transition: all 1s;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+.slider-fellow .swiper-slide-active .text {
+  bottom: -25px;
+  opacity: 1;
+  transition-delay: 200ms;
+}
+.slider-fellow .swiper-pagination {
+  bottom: 0;
+  width: 100%;
+}
+.slider-fellow .swiper-pagination .swiper-pagination-bullet {
+  border: none;
+  border-radius: 0;
+  margin-left: 17px;
+  width: 15px;
+  height: 15px;
+  background: #3d4049;
+  outline: none;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  -moz-border-radius: 15px;
+  -webkit-border-radius: 15px;
+  border-radius: 15px;
+}
+.slider-fellow .swiper-pagination .swiper-pagination-bullet:first-child {
+  margin-left: 0;
+}
+.slider-fellow .swiper-pagination .swiper-pagination-bullet-active {
+  width: 40px;
+}
+.slider-fellow .adjutantSlide .arrowWrap {
+  display: none;
+}
 .slider-hide {
   position: absolute;
   top: 50%;
@@ -2869,7 +3167,7 @@ ul.list-reset.app-list li.app-logo img {
 }
 @media (min-width: 1024px) {
   .tab-group .tab-navi {
-    width: 27px;
+    width: 190px;
     padding-top: 53px;
     margin-right: 63px;
   }
@@ -3435,11 +3733,13 @@ ul.list-reset.app-list li.app-logo img {
 @media (max-width: 1023px) {
   .tab-group .tab-content-group--sub .content-img {
     width: 65%;
+    margin-bottom: 5%;
   }
 }
 @media (max-width: 374px) {
   .tab-group .tab-content-group--sub .content-img {
     width: 60%;
+    margin-bottom: 0%;
   }
 }
 @media (min-width: 1024px) {
