--- a/assets/sass/main2.scss
+++ b/assets/sass/main2.scss
@@ -1609,6 +1609,236 @@ ul.list-reset.app-list {
 			}
 		}
 	}
+	&-fellow {
+		position: relative;
+		margin-left: auto;
+		margin-right: auto;
+		overflow: hidden;
+		@include breakpoint(1024px) {
+			width: 700px;
+			height: 363px;
+		}
+		@include breakpoint(1366px) {
+			width: 894px;
+			height: 484px;
+		}
+		@include breakpoint(1600px) {
+			width: 1135px;
+			height: 567px;
+		}
+		@include breakpoint(1920px) {
+			width: 1268px;
+			height: 680px;
+		}
+		&.slideBox {
+			@include breakpoint(max-width 1023px) {
+				width: 100%;
+				height: 100%;
+			}
+			@include breakpoint(1024px) {
+				top: -30px;
+			}
+			@include breakpoint(1366px) {
+				top: -40px;
+			}
+			@include breakpoint(1600px) {
+				top: -46px;
+			}
+			@include breakpoint(1920px) {
+				top: -55px;
+			}
+		}
+		.inner {
+			width: 100%;
+			height: 100%;
+			@include breakpoint(1024px) {
+				position: absolute;
+				top: 0;
+				left: 50%;
+				width: 3000px;
+				margin-left: -1500px;
+			}
+		}
+		.swiper-container {
+			width: 100%;
+			height: 100%;
+		}
+		.swiper-slide {
+			text-align: center;
+			@include breakpoint(1024px) {
+				width: 107px;
+				padding: 59px 0;
+			}
+			@include breakpoint(1366px) {
+				width: 142px;
+				padding: 78px 0;
+			}
+			@include breakpoint(1600px) {
+				width: 167px;
+				padding: 92px 0;
+			}
+			@include breakpoint(1920px) {
+				width: 200px;
+				padding: 110px 0;
+			}
+		}
+		.swiper-slide .item {
+			position: relative;
+			cursor: pointer;
+			background-position: center;
+			background-repeat: no-repeat;
+			@include background-size(cover);
+			@include transition(.3s all);
+			@include breakpoint(1024px) {
+				height: 235px;
+			}
+			@include breakpoint(1366px) {
+				height: 313px;
+			}
+			@include breakpoint(1600px) {
+				height: 367px;
+			}
+			@include breakpoint(1920px) {
+				height: 440px;
+			}
+		}
+		.swiper-slide .item:after {
+			content: '';
+			position: absolute;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			z-index: 20;
+		}
+		.swiper-slide .img {
+			@include breakpoint(1024px) {
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				opacity: 0;
+				visibility: hidden;
+				@include translate(-50%, -50%);
+				z-index: 10;
+				img {
+					position: absolute;
+					top: 50%;
+					left: 50%;
+					width: 100%;
+					@include translate(-50%, -50%);
+				}
+			}
+			@include breakpoint(1024px) {
+				width: 314px;
+				height: 391px;
+			}
+			@include breakpoint(1366px) {
+				width: 418px;
+				height: 522px;
+			}
+			@include breakpoint(1600px) {
+				width: 490px;
+				height: 612px;
+			}
+			@include breakpoint(1920px) {
+				width: 588px;
+				height: 734px;
+			}
+		}
+		.swiper-slide .text {
+			position: absolute;
+			left: -10px;
+			bottom: 30px;
+			opacity: 0;
+			z-index: 2;
+			transition: .4s all;
+			z-index: 11;
+		}
+		.swiper-slide.no1 .item {
+			background-image: url('../img/adCha01.png');
+		}
+		.swiper-slide.no2 .item {
+			background-image: url('../img/adCha02.png');
+		}
+		.swiper-slide.no3 .item {
+			background-image: url('../img/adCha03.png');
+		}
+		.swiper-slide.no4 .item {
+			background-image: url('../img/adCha04.png');
+		}
+		.swiper-slide.no5 .item {
+			background-image: url('../img/adCha05.png');
+		}
+		.swiper-slide.no1 .item:hover {
+			background-image: url('../img/adCha01_on.png');
+		}
+		.swiper-slide.no2 .item:hover {
+			background-image: url('../img/adCha02_on.png');
+		}
+		.swiper-slide.no3 .item:hover {
+			background-image: url('../img/adCha03_on.png');
+		}
+		.swiper-slide.no4 .item:hover {
+			background-image: url('../img/adCha04_on.png');
+		}
+		.swiper-slide.no5 .item:hover {
+			background-image: url('../img/adCha05_on.png');
+		}
+		.img {
+			text-align: center;
+		}
+		.swiper-slide-active {
+			@include breakpoint(1024px) {
+				width: 170px !important;
+			}
+			@include breakpoint(1366px) {
+				width: 226px !important;
+			}
+			@include breakpoint(1600px) {
+				width: 265px !important;
+			}
+			@include breakpoint(1920px) {
+				width: 318px !important;
+			}
+		}
+		.swiper-slide-active .item {
+			background: none !important;
+		}
+		.swiper-slide-active .img {
+			opacity: 1;
+			visibility: visible;
+			@include transition(1s all);
+		}
+		.swiper-slide-active .text {
+			bottom: -25px;
+			opacity: 1;
+			transition-delay: 200ms;
+		}
+		.swiper-pagination {
+			bottom: 0;
+			width: 100%;
+		}
+		.swiper-pagination .swiper-pagination-bullet {
+			border: none;
+			border-radius: 0;
+			margin-left: 17px;
+			width: 15px;
+			height: 15px;
+			background: #3d4049;
+			outline: none;
+			@include transition(.3s all);
+			@include border-radius(15px);
+		}
+		.swiper-pagination .swiper-pagination-bullet:first-child {
+			margin-left: 0;
+		}
+		.swiper-pagination .swiper-pagination-bullet-active {
+			width: 40px;
+		}
+		.adjutantSlide .arrowWrap {
+			display: none;
+		}
+	}
 	&-hide {
 		position: absolute;
 		top: 50%;
@@ -1881,7 +2111,7 @@ ul.list-reset.app-list {
 			top: 115px;
 		}
 		@include breakpoint(1024px) {
-			width: 27px;
+			width: 190px;
 			padding-top: 53px;
 			margin-right: 63px;
 		}
@@ -2331,9 +2561,11 @@ ul.list-reset.app-list {
 				top: 0;
 				@include breakpoint(max-width 1023px) {
 					width: 65%;
+					margin-bottom: 5%;
 				}
 				@include breakpoint(max-width 374px) {
 					width: 60%;
+					margin-bottom: 0%;
 				}
 				@include breakpoint(1024px) {
 					right: -27px;
